# heatwaves-in-the-philippines

./: .buildinfo  .gitignore  README.html  README.md  environment.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: gh-pages.yml
_sources/notebooks/air-pollution/: air-pollution.ipynb
_sources/notebooks/measuring-heatwaves/: heatwaves-in-philippines.ipynb
docs/: _config.yml  _toc.yml  foundational_datasets_and_data_products.md  ~$DRR Grant proposal - Excess Heat in Filipino Cities.docx  ~WRL1187.tmp
docs/OSM NCR Data/: osm_commercial_in_ncr.geojson  osm_hospitals_in_ncr.geojson  osm_industrial_in_ncr.geojson  osm_parks_in_ncr.geojson  osm_residential_in_ncr.geojson  osm_schools_in_ncr.geojson
notebooks/: environment.yml  heat-and-air-pollution.ipynb
notebooks/air-pollution/: README.md  air-pollution.html
notebooks/measuring-heatwaves/: analyse-era5.ipynb  calculate-heat-index.ipynb  calculate-heatwaves-incidence-era5.ipynb  calculate-heatwaves-incidence.ipynb  extract-era5-relative-humidity.ipynb  extract-era5.ipynb  heatwaves-in-philippines.html  heatwaves-in-philippines.ipynb  ph-heatwaves.ipynb  weather-tomorrow.io.ipynb
notebooks/socio-economic-indicators/: census.html  census.ipynb
src/heatwaves/: __init__.py  geographic.py  weather.py
utilities/: __init__.py  tomorrowioFunctions.py  visualizationFunctions.py  weatherFunctions.py
