[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heatwaves"
dynamic = ["version"]
description = "Package for mesuring impact of and vulnerability to heatwaves created by the WB Data Lab"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["world bank", "climate change", "heatwave"]
authors = [
  {name="World Bank Data Lab", email="datalab@worldbank.org"},
]
maintainers = [
  {name="Sahiti Sarva", email="ssarva@worldbank.org"},
]
classifiers = [
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = []
[project.optional-dependencies]
notebook = ["notebook>=6.5.2"]

[project.urls]
"Homepage" = "https://github.com/datapartnership/heatwaves"
"Bug Reports" = "https://github.com/datapartnership/heatwaves/issues"
"Source" = "https://github.com/datapartnership/heatwaves"

[tool.setuptools.dynamic]
version = {attr = "heatwaves.__version__"}